# bookbuilder

./: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  FolderPickerApp.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md
Services/: IFolderPicker.cs
_OLD/: README.md
_OLD/src/: main.js  styles.css.map  styles.sass  vue.esm-browser.js
_OLD/src-tauri/: Cargo.toml  tauri.conf.json
_OLD/src-tauri/src/: main.rs  types.rs
mkepub/: BookBuildView.swift  CentralPanelView.swift  Compress.swift  ContentView.swift  ContentViewHelpers.swift  EbookTabView.swift  Epub.swift  FileBrowserView.swift  HTMLTabView.swift  LeftPanelView.swift  LogView.swift  MakeBook.swift  PDFTabView.swift  Preprocess.swift  Preprocess.swift.bak.swift  PreviewPanelView.swift  PrintTabView.swift  RightPanelView.swift  Settings.swift  TeXBook.swift  Types.swift  Util.swift  mkepubApp.swift
mkepub.xcodeproj/: project.pbxproj
mkepub.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
mkepub.xcodeproj/project.xcworkspace/xcuserdata/mrstiltskin.xcuserdatad/: UserInterfaceState.xcuserstate
mkepub.xcodeproj/project.xcworkspace/xcuserdata/rumpel.xcuserdatad/: UserInterfaceState.xcuserstate
mkepub.xcodeproj/project.xcworkspace/xcuserdata/rumpelstiltskin.xcuserdatad/: UserInterfaceState.xcuserstate
mkepub/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/: index.html  main.js  styles.css  styles.css.map  styles.sass
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+2 files in other folders)
